# papaproc

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust-tests.yml
docs/superpowers/plans/: 2026-05-17-papaproc.md
docs/superpowers/specs/: 2026-05-17-papaproc-design.md
examples/: papaproc.yaml
examples/fake-stack/: README.md  papaproc.yaml  smoke-test.sh
examples/fake-stack/scripts/: fake-api.sh  fake-db.sh  fake-web.sh  noisy-logs.sh
src/: cli.rs  config.rs  diagnostics.rs  graph.rs  lib.rs  main.rs  readiness.rs  snapshot.rs  state.rs  supervisor.rs  tui.rs
tests/: config_test.rs  diagnostics_test.rs  graph_test.rs  readiness_test.rs  snapshot_test.rs  supervisor_test.rs
