[package]
name = "papaproc"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A dependency-aware process runner for local development"
license = "MIT"
repository = "https://github.com/cesarferreira/papaproc"
homepage = "https://github.com/cesarferreira/papaproc"
readme = "README.md"
keywords = ["process", "tui", "devtools", "orchestration", "readiness"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
libc = "0.2"
ratatui = "0.29"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
shell-words = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
